--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "testdemo.sunyard.com"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -29,5 +29,6 @@ dependencies {
 //    implementation 'com.google.zxing:core:3.3.0'
 //    implementation 'com.google.zxing:android-core:3.3.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation files('libs/proguard-smartpos_api_20180228.jar')
 }
