--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -28,7 +29,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
 //    implementation 'com.google.zxing:core:3.3.0'
 //    implementation 'com.google.zxing:android-core:3.3.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation files('libs/proguard-smartpos_api_20180228.jar')
 }
